--- a/css/login.css
+++ b/css/login.css
@@ -58,7 +58,7 @@ color: black;
     padding: 30px;
 }
 .main .form input{
-    width: 298px;
+    width: 303px;
     height: 48px;
     margin-top: 20px;
 }
@@ -148,4 +148,7 @@ font-size: 14px;
     height: 32px;
     background-position: -218px -137px;
     margin-right: 15px;
+}
+.error{
+	color:red;
 }
